Eliminate obsolete preference paths
